# 2-TSP

./: README.md  construct.py  helpers.py  local_search.py  present.py  pyproject.toml  walkthrough.ipynb
.github/workflows/: ci.yml
tests/: conftest.py  test_construct.py  test_evolutionary.py  test_local_search.py  test_local_search_metaheuristics.py  test_local_search_optimized.py
two_tsp/: construct.py  evolutionary.py  helpers.py  loader.py  local_search.py  local_search_metaheuristics.py  local_search_optimized.py  present.py
two_tsp/core/: construct.py  evolutionary.py  helpers.py  local_search.py  local_search_metaheuristics.py  local_search_optimized.py
two_tsp/utils/: loader.py  present.py
